ADD RADAR GRAPHS

--- a/index.html
+++ b/index.html
@@ -2,18 +2,26 @@
 <html>
   <head>
     <meta charset='utf-8'>
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+    <!-- <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen"> -->
 
-    <title>Bt2101 by MaxKusnadi</title>
+    <script src='Chart.js/Chart.js'></script>
+
+    <title>BT2101 Project 2015</title>
   </head>
 
   <body>
 
-    <header>
+    <canvas id='chart1' width='400' height='400'></canvas>
+
+    <button id='canonRadar' onclick='canonR()'>Canon</button>
+    <button id='nikonRadar' onclick='nikonR()'>Nikon</button>
+
+    <canvas id='chart2' width='400' height='400'></canvas>
+
+
+    <!-- <header>
       <div class="container">
         <h1>Bt2101</h1>
         <h2>Camera Analysis</h2>
@@ -54,7 +62,10 @@
 <p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
       </section>
     </div>
+ -->
 
-    
   </body>
+
+  <script src='main.js'></script>
+
 </html>
