Add Year for Pie Charts

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 
     <canvas id='chart2' width='400' height='400'></canvas>
 
+    <button id='2011Pie' onclick='year1P()'>2011</button>
+    <button id='2012Pie' onclick='year2P()'>2012</button>
+
 
     <!-- <header>
       <div class="container">
