--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     <button id='2011Pie' onclick='year1P()'>2011</button>
     <button id='2012Pie' onclick='year2P()'>2012</button>
 
+    <canvas id='chart3' width='400' height='400'></canvas>
 
+    <button id='2011Line' onclick='nikonL()'>Nikon</button>
+    <button id='2012Line' onclick='canonL()'>Canon</button>
     <!-- <header>
       <div class="container">
         <h1>Bt2101</h1>
