--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <button id='canonRadar' onclick='olympusR()'>Olympus</button>
       <button id='canonRadar' onclick='panasonicR()'>Panasonic</button>
       <button id='nikonRadar' onclick='pentaxR()'>Pentax</button>
+      <button id='othersRadar' onclick='othersR()'>Others</button>
     </div>
     <div>
       <canvas id='chart2' width='600' height='600'></canvas>
