--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
   <body>
     <div>
+      <h1> Normalize</h1>
       <canvas id='chart1' width='600' height='600'></canvas>
 
       <button id='canonRadar' onclick='canonR()'>Canon</button>
