--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 
   <body>
     <div>
-      <h1> Normalize</h1>
-      <canvas id='chart1' width='600' height='600'></canvas>
+      <h3> % of reviews on a particular aspect</h3>
+      <canvas id='chart1' width='400' height='400'></canvas>
+      <h3> Normalize values of positive reviews</h3>
+      <canvas id='chart1pos' width='400' height='400'></canvas>
 
       <button id='canonRadar' onclick='canonR()'>Canon</button>
       <button id='nikonRadar' onclick='nikonR()'>Nikon</button>
