--- a/index.html
+++ b/index.html
@@ -37,30 +37,30 @@
       <button id='nikonRadar' onclick='pentaxR()'>Pentax</button>
     </div>
 
-    <h3>2. Review Volume Against Time (All)</h3>
-    <div id="container" style="width:100%; height:400px; padding-bottom:50px">
+    <h3>2. Canon's Volume and Percentage of Positive Rating Trend Overtime</h3>
+    <div id="container1" style="width:100%; height:400px; padding-bottom:50px">
+      <script>
+        Combine();      
+      </script>
+    </div>    
+
+    <h3>3. Industry's Volume of Reviews Against Time</h3>
+    <div id="container2" style="width:100%; height:400px; padding-bottom:50px">
       <script>
         Stacked();      
       </script>
     </div>
 
-    <h3>3. Percentage of Positive Rating Trend Overtime</h3>
-    <h3>4. Volume of Reviews Trend over Time </h3>
-
-    <div>
-      <canvas id='chart2' width='600' height='600'></canvas>
-
-      <button id='2011Pie' onclick='year1P()'>2011</button>
-      <button id='2012Pie' onclick='year2P()'>2012</button>
+    <h3>4. Industry's Percentage of Positive Rating over Time </h3>
+    <div id="container3" style="width:100%; height:400px; padding-bottom:50px">
+      <script>
+        Line();      
+      </script>
     </div>
+
     
     
-    <div>
-      <canvas id='chart3' width='600' height='600'></canvas>
 
-      <button id='2011Line' onclick='nikonL()'>Nikon</button>
-      <button id='2012Line' onclick='canonL()'>Canon</button>
-    </div>
     <!-- <header>
       <div class="container">
         <h1>Bt2101</h1>
