--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <h3> 1. Frequency Analysis by Features and Sentiments</h3>
     <div class="diagram1">
       <h4 align="center"> % of reviews on a particular aspect</h3>
-      <canvas id='chart1' width='400' height='400'></canvas>
+      <canvas id='chart1' width='400' height='400' align="center"></canvas>
     </div>
     <div class="diagram1">
       <h4 align="center"> Normalize values of positive reviews</h3>
-      <canvas id='chart1pos' width='400' height='400'></canvas>
+      <canvas id='chart1pos' width='400' height='400' align="center"></canvas>
     </div>
     <div align = "center" style="padding-bottom:50px">
       <button id='canonRadar' onclick='canonR()'>Canon</button>
