--- a/index.html
+++ b/index.html
@@ -1,111 +1,134 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset='utf-8'>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>BT2101 Project: Canon Customer Insight Report CHarts</title>
 
-    <!-- <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen"> -->
-    <link rel="stylesheet" type="text/css" href="css.css" media="screen">
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script src='Chart.js/Chart.js'></script>
+  <script src='Chart.js/Chart.js'></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script src="http://code.highcharts.com/highcharts.js"></script>
     <script src='moreCharts.js'></script>
 
-    <title>BT2101 Project 2015</title>
-  </head>
+  <!-- <link rel="shortcut icon" href="img/favicon.png">
+  <link rel="apple-touch-icon" sizes="57x57" href="img/apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="img/apple-touch-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="img/apple-touch-icon-114x114.png"> -->
 
-  <body>
-    <h1 align="center">Canon Customer Insights Report</h1>
-    <h2>Our Findings</h2>
-    <h3> 1. Frequency Analysis by Features and Sentiments</h3>
-    <div class="diagram1">
-      <h4 align="center"> % of reviews on a particular aspect</h3>
-      <canvas id='chart1' width='400' height='400' align="center"></canvas>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+<div class="banner">
+  <div class="header">
+    <div class="header-inner container clear">
+      <input type="checkbox" id="navigation-toggle-checkbox" name="navigation-toggle-checkbox" class="navigation-toggle-checkbox none">
     </div>
-    <div class="diagram1">
-      <h4 align="center"> Normalize values of positive reviews</h3>
-      <canvas id='chart1pos' width='400' height='400' align="center"></canvas>
-    </div>
-    <div align = "center" style="padding-bottom:50px">
-      <button id='canonRadar' onclick='canonR()'>Canon</button>
-      <button id='nikonRadar' onclick='nikonR()'>Nikon</button>
-      <button id='canonRadar' onclick='sonyR()'>Sony</button>
-      <button id='nikonRadar' onclick='fujiR()'>Fuji</button>
-      <button id='canonRadar' onclick='olympusR()'>Olympus</button>
-      <button id='canonRadar' onclick='panasonicR()'>Panasonic</button>
-      <button id='nikonRadar' onclick='pentaxR()'>Pentax</button>
-    </div>
-
-    <h3>2. Canon's Volume and Percentage of Positive Rating Trend Overtime</h3>
-    <div id="container1" style="width:100%; height:400px; padding-bottom:50px">
-      <script>
-        Combine();      
-      </script>
-    </div>    
-
-    <h3>3. Industry's Volume of Reviews Against Time</h3>
-    <div id="container2" style="width:100%; height:400px; padding-bottom:50px">
-      <script>
-        Stacked();      
-      </script>
-    </div>
-
-    <h3>4. Industry's Percentage of Positive Rating over Time </h3>
-    <div id="container3" style="width:100%; height:400px; padding-bottom:50px">
-      <script>
-        Line();      
-      </script>
-    </div>
-
-    
-    
-
-    <!-- <header>
-      <div class="container">
-        <h1>Bt2101</h1>
-        <h2>Camera Analysis</h2>
-
-        <section id="downloads">
-          <a href="https://github.com/MaxKusnadi/BT2101/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/MaxKusnadi/BT2101/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/MaxKusnadi/BT2101" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
+  </div>
+  <div class="container">
+    <div class="banner-inner">
+      <h1 class="banner-lead">
+        <span class="banner-lead-1">Canon:</span>
+        <span class="banner-lead-2">Customer Insights Report Charts</span>
+      </h1>
+      <div class="banner-content">
+        <p>
+          Analysing customer reviews on interchangeable lens camera products, as well as perform an in depth analysis on the camera industry and Canon’s competitors.
+        </p>
       </div>
-    </header>
-
-    <div class="container">
-      <section id="main_content">
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
+      <div class="banner-buttons">
+        <a href="#services" class="button button-primary">Our Findings</a>
+      </div>
     </div>
- -->
+  </div>
+</div>
 
-  </body>
+<div id="services" class="animate-block content-block services-block">
+  <div class="services-block-inner container">
+    <div class="content-block-inner">
+      <h2 class='text-center'>Our Findings</h2>
+      <div class="no-float text-center">
+      <h3>1. Frequency Analysis by Features and Sentiments</h3>
+      </div>      
+      <div class="col-4-desktop left">
+          <h4> % of reviews on a particular aspect</h3>
+          <canvas id='chart1' width='400' height='400'></canvas>
+      </div>
 
-  <script src='main.js'></script>
+      <div>
+        <h4> Normalize values of positive reviews</h3>
+        <canvas id='chart1pos' width='400' height='400'></canvas>
+      </div>
+      <div>
+        <button id='canonRadar' onclick='canonR()'>Canon</button>
+        <button id='nikonRadar' onclick='nikonR()'>Nikon</button>
+        <button id='canonRadar' onclick='sonyR()'>Sony</button>
+        <button id='nikonRadar' onclick='fujiR()'>Fuji</button>
+        <button id='canonRadar' onclick='olympusR()'>Olympus</button>
+        <button id='canonRadar' onclick='panasonicR()'>Panasonic</button>
+        <button id='nikonRadar' onclick='pentaxR()'>Pentax</button>
+      </div>
+    </div>
+  </div>
+</div>
 
+<div id="services" class="animate-block content-block services-block">
+  <div class="services-block-inner container">
+    <div class="content-block-inner">
+      <div class="no-float text-center">
+      <h3>2. Canon's Volume and Percentage of Positive Rating Trend Overtime</h3>
+      </div>      
+      <div class="no-float">
+         <div id="container1" style="width:100%; height:400px; padding-bottom:50px">
+          <script>
+         Combine();      
+        </script>
+    </div>
+  </div>
+    </div>
+  </div>
+</div>
+
+<div id="services" class="animate-block content-block services-block">
+  <div class="services-block-inner container">
+    <div class="content-block-inner">
+      <div class="no-float text-center">
+      <h3>3. Industry's Volume of Reviews Against Time</h3>
+      </div>      
+      <div class="no-float">
+         <div id="container2" style="width:100%; height:400px; padding-bottom:50px">
+          <script>
+         Stacked();      
+        </script>
+    </div>
+  </div>
+    </div>
+  </div>
+</div>
+
+<div id="services" class="animate-block content-block services-block">
+  <div class="services-block-inner container">
+    <div class="content-block-inner">
+      <div class="no-float text-center">
+      <h3>4. Industry's Percentage of Positive Rating over Time </h3>
+      </div>      
+      <div class="no-float">
+         <div id="container3" style="width:100%; height:400px; padding-bottom:50px">
+          <script>
+         Line();      
+        </script>
+    </div>
+  </div>
+    </div>
+  </div>
+</div>
+
+<script src="js/vendor/wow.js"></script>
+<script src="js/default.js"></script>
+<script src='main.js'></script>
+
+</body>
 </html>
