--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
 </head>
 <body>
 
-<div class="banner">
+<div class="banner" style='padding-bottom:100px'>
   <div class="header">
     <div class="header-inner container clear">
       <input type="checkbox" id="navigation-toggle-checkbox" name="navigation-toggle-checkbox" class="navigation-toggle-checkbox none">
+      <input type="checkbox" id="navigation-toggle-checkbox" name="navigation-toggle-checkbox" class="navigation-toggle-checkbox none">
+      <label for="navigation-toggle-checkbox" class="navigation-toggle-label" onclick>
     </div>
   </div>
   <div class="container">
@@ -46,7 +48,7 @@
   </div>
 </div>
 
-<div id="services" class="animate-block content-block services-block">
+<div id="services" class="animate-block content-block ">
   <div class="services-block-inner container">
     <div class="content-block-inner">
       <h2 class='text-center'>Our Findings</h2>
