--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <span class="banner-lead-2">Customer Insights Report Charts</span>
       </h1>
       <div class="banner-content">
-        <p>
+        <p style="background-color:#fe504f; border:1px solid transparent, border-radius:40px">
           Analysing customer reviews on interchangeable lens camera products, as well as perform an in depth analysis on the camera industry and Canon’s competitors.
         </p>
       </div>
